--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 20px;
   margin: 200px auto;
   background-image: linear-gradient(to right, rgb(37, 53, 79) , rgb(127, 164, 224));
   color: white;
@@ -34,7 +34,7 @@ li {
 
 .intro {
   align-self: flex-start;
-
+  padding: 0;
 }
 
 .question {
@@ -48,7 +48,7 @@ li {
 
 .links {
   position: absolute;
-  right: 0px;
+  right: -1px;
   bottom: -40px;
 }
 
